# cuda-ai-2026

./: README.md
default/1_gelu_omp/kireev_daniil/: CMakeLists.txt  gelu_omp.cpp  main.cpp
default/1_gelu_omp/kryukov_dmitry/: gelu_omp.cpp
default/1_gelu_omp/pigasin_dmitry/: gelu_omp.cpp
default/1_gelu_omp/putilin_artyom/: gelu_omp.cpp
default/1_gelu_omp/zemskov_roman/: gelu_omp.cpp  gelu_omp.h
default/2_gelu_cuda/chekmaryov_petr/: gelu_cuda.cu  gelu_cuda.h
default/2_gelu_cuda/kozlov_mikhail/: CMakeLists.txt  gelu_cuda.cu  main.cpp
default/2_gelu_cuda/lobanova_elizaveta/: gelu_cuda.cu
default/2_gelu_cuda/zemskov_roman/: gelu_cuda.cu
default/2_gelu_cuda/zinoviev_vladimir/: gelu_cuda.cu
default/2_gelu_cuda/zlobin_george/: gelu_cuda.cu  log.txt
default/3_naive_gemm_cuda/lobanova_elizaveta/: native_gemm_cuda.cu
default/3_naive_gemm_cuda/lukicheva_polina/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/pigasin_dmitry/: CMakeLists.txt  main.cpp  naive_gemm_cuda.cu
default/3_naive_gemm_cuda/pinegina_natalia/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zinoviev_vladimir/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zvorykin_aleksandr/: log.txt
default/4_block_gemm_cuda/chervyakov_ivan/: block_gemm_cuda.cu
default/4_block_gemm_cuda/lobanova_elizaveta/: block_gemm_cuda.cu
default/4_block_gemm_cuda/smirnov_denis/: block_gemm_cuda.cu
default/5_gemm_cublas/lobanova_elizaveta/: gemm_cublas.cu
default/5_gemm_cublas/pisarevsky_vadim/: gemm_cublas.cu
default/5_gemm_cublas/zlobin_george/: gemm_cublas.cu
(+8 files in other folders)
